--- a/src/NetBlog/NetBlog.WebApplication/app.config
+++ b/src/NetBlog/NetBlog.WebApplication/app.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
 	<connectionStrings>
-		<add name="NetBlog" connectionString="Server=DESKTOP-KHPLI0D\SQLEXPRESS;Database=NetBlog;Trusted_Connection=True;"/>
+		<add name="BlogDB" connectionString="Server=DESKTOP-KHPLI0D\SQLEXPRESS;Database=BlogDB;Trusted_Connection=True;"/>
 	</connectionStrings>
 </configuration>
