--- a/src/NetBlog/NetBlog.Queries.Sql/NetBlog.Queries.Sql.csproj
+++ b/src/NetBlog/NetBlog.Queries.Sql/NetBlog.Queries.Sql.csproj
@@ -9,4 +9,8 @@
     <PackageReference Include="System.Configuration.ConfigurationManager" Version="4.5.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\NetBlog.Queries\NetBlog.Queries.csproj" />
+  </ItemGroup>
+
 </Project>
