Add and edit blogs, add view components for menu and sidebar

--- a/src/NetBlog/NetBlog.Domain/NetBlog.Domain.csproj
+++ b/src/NetBlog/NetBlog.Domain/NetBlog.Domain.csproj
@@ -11,6 +11,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\NetBlog.Resources\NetBlog.Resources.csproj" />
+    <ProjectReference Include="..\NetBlog.SharedFramework\NetBlog.SharedFramework.csproj" />
   </ItemGroup>
 
 </Project>
