--- a/src/NetBlog/NetBlog.WebApplication/appsettings.json
+++ b/src/NetBlog/NetBlog.WebApplication/appsettings.json
@@ -1,4 +1,11 @@
 {
+  "AzureAd": {
+    "Instance": "https://login.microsoftonline.com/",
+    "Domain": "elichi2hotmail.onmicrosoft.com",
+    "TenantId": "d4345efb-dfd1-4fab-9c14-3180e7bc8a13",
+    "ClientId": "a6eeec07-2019-4ac9-b883-92c4590f4681",
+    "CallbackPath": "/signin-oidc"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
